Fixed products spacing for medium horizontal screens

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,7 +58,7 @@
       }
       
       @include breakpoint(medium){
-        height: 16rem; 
+        height: 18rem; 
       }
 
       h3 {
@@ -97,7 +97,7 @@
       }
       
       @include breakpoint(medium){
-        height: 16rem; 
+        height: 18rem; 
       }
 
       h3 {
